# django-twc-project

./: .envrc  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  Justfile  README.md  RELEASING.md  VERSION  copier.yml  defaults.yml  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: examples.yml  labels.yml  test.yml
examples/: default.yml  postgis.yml  with_vite.yml
examples/default/: .dockerignore  .env.example  .env.prod  .pre-commit-config.yaml  Dockerfile  Justfile  README.md  compose.override.yml.example  compose.prod.yml  compose.yml  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  fly.toml  manage.py  mkdocs.yml  package.json  prettier.config.mjs  pyproject.toml  requirements.in  requirements.nohash.in
examples/default/.bin/: release.sh  tailscale.sh  web.sh
examples/default/.copier/: project.yml
examples/default/.github/: CODEOWNERS  dependabot.yml
examples/default/.github/workflows/: deploy.yml  labels.yml  semgrep.yml  test.yml
examples/default/.just/: django.just  documentation.just  project.just  python.just
examples/default/default/: __init__.py  asgi.py  settings.py  urls.py
examples/default/default/core/: views.py
examples/default/docs/applications/: index.md
examples/default/templates/: 404.html  500.html  base.html  index.html
examples/default/templates/.well-known/: security.txt
examples/default/tests/: settings.py  test_version.py
examples/postgis/: .dockerignore  .env.example  .env.prod  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  README.md  compose.prod.yml  compose.yml  fly.toml  package.json  pyproject.toml  requirements.in
examples/postgis/.copier/: project.yml
examples/postgis/.github/: dependabot.yml  labels.yml
examples/postgis/.github/workflows/: deploy.yml  semgrep.yml  test.yml
examples/postgis/.just/: docker.just  documentation.just  postgres.just  project.just  python.just
examples/postgis/default/: __init__.py  gunicorn.py  settings.py  urls.py  wsgi.py
examples/postgis/default/core/: apps.py  views.py
examples/postgis/default/users/: apps.py  forms.py
examples/postgis/docs/: conf.py  index.md
examples/postgis/tests/: test_version.py
examples/with_vite/: .dockerignore  .env.example  .env.prod  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  README.md  compose.override.yml.example  compose.prod.yml  compose.yml  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  fly.toml  manage.py  mkdocs.yml  package.json  pyproject.toml  requirements.in
examples/with_vite/.bin/: web.sh  worker.sh
examples/with_vite/.copier/: project.yml
examples/with_vite/.github/: dependabot.yml
examples/with_vite/.github/workflows/: deploy.yml  labels.yml  test.yml
examples/with_vite/.just/: django.just  docker.just  documentation.just  project.just  python.just
examples/with_vite/docs/: conf.py
examples/with_vite/templates/: 404.html  500.html  base.html  index.html
examples/with_vite/tests/: settings.py  test_version.py
examples/with_vite/with_vite/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
examples/with_vite/with_vite/core/: apps.py
examples/with_vite/with_vite/users/: admin.py  apps.py
extensions/: context.py
src/django_twc_project/: .dockerignore.jinja  .env.example.jinja  .env.prod.jinja  .gitignore  .pre-commit-config.yaml.jinja  Dockerfile.jinja  Justfile.jinja  README.md.jinja  compose.override.yml.example.jinja  compose.prod.yml.jinja  compose.yml.jinja  docker-compose.override.yml.example.jinja  docker-compose.yml.jinja  fly.toml.jinja  mkdocs.yml.jinja  package.json.jinja  pyproject.toml.jinja  requirements.in.jinja  requirements.nohash.in.jinja  tailwind.config.mjs  {% if include_vite %}tsconfig.json{% endif %}.jinja  {% if include_vite %}vite.config.ts{% endif %}.jinja
src/django_twc_project/.github/: CODEOWNERS  dependabot.yml.jinja  labels.yml
src/django_twc_project/.github/workflows/: deploy.yml.jinja  labels.yml  semgrep.yml  test.yml.jinja
src/django_twc_project/.just/: copier.just  django.just  docker.just  documentation.just  node.just  postgres.just  prod.just  project.just  python.just.jinja
src/django_twc_project/docs/: requirements.in
src/django_twc_project/static/src/: tailwind.css
src/django_twc_project/templates/: 404.html  base.html.jinja
src/django_twc_project/tests/: conftest.py  settings.py.jinja
src/django_twc_project/{{ module_name }}/: __init__.py.jinja  settings.py.jinja  urls.py.jinja  uvicorn.py
src/django_twc_project/{{ module_name }}/core/: sentry.py  views.py
src/django_twc_project/{{ module_name }}/users/: admin.py  forms.py  models.py
src/django_twc_template/: .dockerignore  .env.example.jinja  .gitignore  Dockerfile.jinja  docker-compose.yml.jinja  manage.py.jinja  package.json.jinja  prettier.config.mjs  requirements.in.jinja  {% if include_vite %}tsconfig.json{% endif %}.jinja
src/django_twc_template/.bin/: web.sh.jinja
src/django_twc_template/.github/: dependabot.yml.jinja
src/django_twc_template/docs/: conf.py.jinja
src/django_twc_template/tests/: conftest.py  test_version.py.jinja
src/django_twc_template/{{ module_name }}/: urls.py.jinja  wsgi.py.jinja
template/: .dockerignore  .editorconfig  .env.example.jinja  .pre-commit-config.yaml.jinja  Dockerfile.jinja  Justfile.jinja  docker-compose.override.yml.example.jinja  docker-compose.prod.yml.jinja  docker-compose.yml.jinja  docker-entrypoint.sh  fly.toml.jinja  package.json  pyproject.toml.jinja  requirements.in.jinja  tailwind.config.js
template/.bin/: tailscale.sh
template/.github/: dependabot.yml.jinja
template/.github/workflows/: deploy.yml.jinja  test.yml.jinja
template/templates/: base.html.jinja
template/templates/.well-known/: security.txt.jinja
template/{{ module_name }}/: __init__.py.jinja  asgi.py.jinja  settings.py.jinja  urls.py.jinja
template/{{ module_name }}/core/: apps.py.jinja  sentry.py
template/{{ module_name }}/users/: apps.py.jinja
tests/: __init__.py  test_version.py
(+5 files in other folders)
