[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Josh", email = "josh@joshthomas.dev"}
]
dependencies = [
  "copier>=9.1.1"
]
description = "Add your description here"
license = {text = "MIT"}
name = "django-twc-project"
readme = "README.md"
requires-python = ">= 3.8"
version = "2024.1"

[tool.bumpver]
commit = true
commit_message = ":bookmark: bump version {old_version} -> {new_version}"
current_version = "2024.1"
push = false  # set to false for CI
tag = true
version_pattern = "YYYY.INC1"

[tool.bumpver.file_patterns]
"copier.yml" = [
  'default: "{version}"'
]
"pyproject.toml" = [
  'version = "{version}"'
]
"tests/test_version.py" = [
  'assert version == "{version}"'
]

[tool.hatch.build.targets.wheel]
packages = ["src/django_twc_project"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
addopts = "-n auto --dist loadfile --doctest-modules"
norecursedirs = ".* bin build dist *.egg examples htmlcov logs node_modules src templates venv"
python_files = "tests.py test_*.py *_tests.py"
testpaths = ["tests"]

[tool.rye]
dev-dependencies = [
  "bumpver>=2023.1129",
  "djlint>=1.34.1",
  "pytest>=8.0.0",
  "pytest-xdist>=3.5.0",
  "pytest-randomly>=3.15.0",
  "pytest-reverse>=1.7.0",
  "pyyaml>=6.0.1"
]
managed = true
virtual = true
