[dependency-groups]
dev = [
  "bumpver>=2023.1129",
  "djlint>=1.34.1",
  "pytest>=8.0.0",
  "pytest-xdist>=3.5.0",
  "pytest-randomly>=3.15.0",
  "pytest-reverse>=1.7.0",
  "pyyaml>=6.0.1",
  "pre-commit>=3.7.0"
]

[project]
authors = [{name = "Josh", email = "josh@joshthomas.dev"}]
dependencies = [
  "copier",
  "copier-templates-extensions"
]
description = "A Django project template for The Westervelt Company."
dynamic = ["version"]
license = {file = "LICENSE"}
name = "django-twc-project"
readme = "README.md"
requires-python = ">= 3.10"

[tool.bumpver]
commit = true
commit_message = ":bookmark: bump version {old_version} -> {new_version}"
current_version = "2024.51"
push = false  # set to false for CI
tag = false
version_pattern = "YYYY.INC1"

[tool.bumpver.file_patterns]
"VERSION" = ['{version}']
"copier.yml" = ['default: "{version}"']
"tests/test_version.py" = ['assert version == "{version}"']

[tool.djlint]
ignore = "H031"  # Don't require `meta` tag keywords
indent = 2

[tool.pytest.ini_options]
addopts = "-n auto --dist loadfile --doctest-modules"
norecursedirs = ".* bin build dist *.egg examples htmlcov logs node_modules src templates venv"
python_files = "tests.py test_*.py *_tests.py"
testpaths = ["tests"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".github",
  ".hg",
  ".mypy_cache",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "build",
  "dist",
  "migrations",
  "node_modules",
  "venv"
]
extend-include = ["*.pyi?"]
indent-width = 4
# Same as Black.
line-length = 88
# Assume Python >3.10
target-version = "py310"

[tool.ruff.format]
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
# Like Black, use double quotes for strings.
quote-style = "double"

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
ignore = ["E501", "E741"]  # temporary
select = [
  "A",  # flake8-builtins
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "DJ",  # flake8-django
  "DTZ",  # flake8-datetimez
  "E",  # Pycodestyle
  "F",  # Pyflakes
  "G",  # flake8-logging-format
  "I",  # isort
  "LOG",  # flake8-logging
  "PIE",  # flake8-pie
  "PT",  # flake8-pytest-style
  "RET",  # flake8-return
  "RUF100",  # unused noqa
  "S",  # flake8-bandit
  "SIM",  # flake8-simplify
  "T20",  # flake8-print
  "UP"  # pyupgrade
]
unfixable = []

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = []
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
# Sphinx's conf.py uses `copyright`, which shadows a builtin (A001)
"**/docs/conf.py" = ["A001"]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
